<resources>
    <string name="app_name">TextR</string>
    <string name="createText">Create a new Account</string>
    <string name="regName">Name</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">Password</string>
    <string name="registerBtn">REGISTER</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="all_users">All Users</string>
    <string name="signInBtn">SIGN INTO YOUR ACCOUNT</string>
    <string name="welcomeText">Welcome to TextR</string>
    <string name="loginBtn">LOGIN</string>
    <string name="passwordL">Password</string>
    <string name="loginTxt">Login to your Account</string>
    <string name="emailL">Email</string>

    <string name="homeMenu">Home</string>
    <string name="changeImage">CHANGE IMAGE</string>
    <string name="changeStatus">CHANGE STATUS</string>
    <string name="usersName">Display Name</string>
    <string name="prof_pic">Profile Picture</string>
    <string name="settStat">Be right back</string>
    <string name="startPic">Start Image</string>
    <string name="message">message</string>
    <string name="send">sendMessage</string>
    <string name="leng">length</string>
    <string name="sendMessage">Send Message</string>
    <string name="contacts">CONTACTS</string>
    <string name="mobile_num">Mobile Num</string>
    <string name="num">num</string>
    <string name="name">name</string>
    <string name="deactivate">DEACTIVATE</string>
    <string name="AllUsers">All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests_fragment">Requests Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="status">Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_display">Display Name</string>
    <string name="user_default_status">User Default Status</string>
    <string name="image_all_user">user_image</string>
    <string name="display_name">Display Name</string>
    <string name="change_user_status">Change user Status</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="total_friends">Total Friends</string>
    <string name="profileImageP">ProfileImageP</string>
    <string name="decline_Request">Decline Request</string>
    <string name="onlineimageicon">OnlineImageIcon</string>


</resources>
