<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <ImageView
        android:id="@+id/profPic"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_above="@+id/users_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/prof_pic"
        app:srcCompat="@drawable/textr" />

    <Button
        android:id="@+id/change_img"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="148dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/changeImage"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/change_status"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/changeStatus"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/users_name"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="256dp"
        android:text="@string/usersName"
        android:textAllCaps="true"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/setStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:text="@string/settStat" />

    <Button
        android:id="@+id/deactivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setStat"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/deactivate"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</RelativeLayout>