<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/nums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="2sp"
        android:layout_height="match_parent"
        android:layout_margin="4sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/mobileno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_num"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout></LinearLayout>