<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/user_single_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/image_all_user"
        android:src="@drawable/textr" />

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="15dp"
        android:text="@string/user_display"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_single_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:text="@string/user_default_status" />

    <ImageView
        android:id="@+id/user_single_online_icon"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_single_status"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="-47dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/online" />


</RelativeLayout>