<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SmsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textContainer"
        android:layout_width='match_parent'
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="164" >

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="364dp"
        android:layout_height="155dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start"
        android:hint="@string/message"
        android:inputType="textPersonName"
        android:maxLength="160"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/send"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:layout_marginEnd="108dp"
        android:text="@string/sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.034" />


</android.support.constraint.ConstraintLayout>